[gd_scene load_steps=3 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://health_bar_scene" path="res://scenes/ui/health_bar.tscn" id="2"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("1")

[node name="PlayerPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 90.0

[node name="Portrait" type="TextureRect" parent="PlayerPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Bars" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" parent="PlayerPanel/Bars" instance=ExtResource("2")]
layout_mode = 2

[node name="ComboMeter" type="ProgressBar" parent="PlayerPanel/Bars"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
show_percentage = false

[node name="EnemyPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -340.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 90.0
grow_horizontal = 0

[node name="Bars" type="VBoxContainer" parent="EnemyPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" parent="EnemyPanel/Bars" instance=ExtResource("2")]
layout_mode = 2

[node name="ComboMeter" type="ProgressBar" parent="EnemyPanel/Bars"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
show_percentage = false

[node name="Portrait" type="TextureRect" parent="EnemyPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5
